# ROS-WebCam-Face-Detection

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/face_detection/: FaceDetection.h  FaceDetectionRequest.h  FaceDetectionResponse.h
devel/share/common-lisp/ros/face_detection/msg/: _package.lisp  face_detection-msg.asd
devel/share/common-lisp/ros/face_detection/srv/: FaceDetection.lisp  _package_FaceDetection.lisp  face_detection-srv.asd
devel/share/cv_webcam/cmake/: cv_webcamConfig.cmake
devel/share/face_detection/cmake/: face_detection-msg-extras.cmake  face_detection-msg-paths.cmake  face_detectionConfig.cmake
devel/share/gennodejs/ros/face_detection/msg/: BoundingBox.js
devel/share/roseus/ros/face_detection/: manifest.l
devel/share/video_stream_opencv/cmake/: video_stream_opencvConfig.cmake
install/: .rosinstall  _setup_util.py  setup.sh
install/include/face_detection/: BoundingBox.h
install/share/common-lisp/ros/face_detection/msg/: BoundingBox.lisp
install/share/common-lisp/ros/face_detection/srv/: _package.lisp
install/share/cv_webcam/: package.xml
install/share/cv_webcam/cmake/: cv_webcamConfig.cmake
install/share/face_detection/cmake/: face_detection-msg-extras.cmake  face_detection-msg-paths.cmake  face_detectionConfig.cmake
install/share/gennodejs/ros/face_detection/srv/: FaceDetection.js  _index.js
install/share/roseus/ros/face_detection/msg/: BoundingBox.l
install/share/roseus/ros/face_detection/srv/: FaceDetection.l
src/cv_webcam/: CMakeLists.txt
src/cv_webcam/launch/: webcam.launch
src/cv_webcam/src/: webcam_driver.cpp  webcam_viewer.cpp
src/face_detection/: CMakeLists.txt  package.xml
src/face_detection/launch/: face_detect.launch
src/face_detection/src/: face_detection_client.cpp  face_detection_server.cpp
src/face_detection/srv/: FaceDetection.srv
