<package>
  <name>cv_webcam</name>
  <version>1.0.0</version>

  <description>
    Reading webcam streaming video by utilizing OpenCV VideoCapture, and
    converting OpenCV cv::Mat into ROS Image Message.
  </description>

  <maintainer email="zeyuz@outlook.com">Zeyu</maintainer>
  <author>Zeyu Zhang</author>

  <url type="website">https://github.com/TooSchoolForCool/ROS-WebCam-Face-Detection</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>